<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>geographiclib_cmake_module</name>
 <version>0.0.1</version>
 <description>Expose CMake targets from older geographiclib libraries for Ubuntu Jammy</description>
 <maintainer email="25047695+Ryanf55@users.noreply.github.com">Ryan Friedman</maintainer>
 <license>MIT</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <depend>geographiclib</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
